# PrimitiveRecursiveFunction

./: CMakeLists.txt  README.md
include/: composition_function.h  identity_function.h  primitive_recursive_function.h  project_function.h  recursion_function.h  successor_function.h  zero_function.h
include/functions/: composition_function.h  function_builder.h  identity_function.h  primitive_recursive_function.h  project_function.h  recursion_function.h  successor_function.h  zero_function.h
include/interactive/: function_registry.h  interactive_menu.h
src/: main.cc
src/functions/: composition_function.cc  function_builder.cc  identity_function.cc  projection_function.cc  recursion_function.cc  successor_function.cc  zero_function.cc
src/interactive/: function_registry.cc  interactive_menu.cc
